@@ -5,7 +5,7 @@
 	* Remove the plugParent argument to the constructor, and move the plug creation code to an implementation of the new setupPlug() pure virtual function.
 	* Stop passing the parameter to the base class constructor, but instead store it as a member variable, and implement the pure virtual parameter() method to return it.
 
-See python/GafferTest/ParameterhHandlerTest.py for an example.
+See python/GafferTest/ParameterHandlerTest.py for an example.
 
 * The path argument to the PathPlugValueWidget is now optional, with a FileSystemPath being used if no path is specified.
 
@@ -26,6 +26,8 @@ See python/GafferTest/ParameterhHandlerTest.py for an example.
 * Added an ObjectParameterHandler.
 
 * Added Widget setEnabled(), getEnabled() and enabled( relativeTo ) methods - see documentation for details. Signals are not emitted for Widgets which have been disabled.
+
+* Fixed a bug in the RunTimeTyped registration for TypedPlug.
 
 0.16.0
 ------
